# classic-games

./: .gitignore  Apple.cpp  Apple.h  CMakeCache.txt  CMakeLists.txt  GameSelector.cpp  GameSelector.h  README.md  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h  SnakeGameManager.cpp  SnakeGameManager.h  SnakeLocation.cpp  SnakeLocation.h  SnakeScreenManager.cpp  SnakeScreenManager.h  Timer.cpp  Timer.h  classic-games.sln  classic-games.vcxproj  classic-games.vcxproj.filters  connect4.sln  main.cpp  path.h  vcpkg.json
Cmake Build/: ALL_BUILD.vcxproj  CMakeCache.txt  ClassicGames.sln  ClassicGames.vcxproj  ClassicGames.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pdcurses-config.cmake  pdcurses-targets.cmake  pdcurses.vcxproj
Connect4/: Connect4GameManager.cpp  DisplayManager.cpp  DisplayManager.h  connect4.h
HangmanCode/: GameManager.h  Hangman.cpp  Hangman.h  HangmanGameManager.cpp  HangmanScreenManager.cpp  ScreenManager.h
HangmanCode/Hangman/: GameManager.cpp  GameManager.h  Hangman.cpp  Hangman.h  Hangman.sln  Hangman.vcxproj  Hangman.vcxproj.filters  ScreenManager.cpp  ScreenManager.h  main.cpp
HangmanCode/Hangman/Hangman/: GameManager.cpp  GameManager.h  Hangman.cpp  Hangman.vcxproj  Hangman.vcxproj.filters  ScreenManager.cpp  ScreenManager.h  main.cpp
MinesweeperCode/: MinesweeperDisplayManager.cpp  MinesweeperDisplayManager.h  MinesweeperGameManager.cpp  MinesweeperGameManager.h  minesweeper.cpp  minesweeper.h
MinesweeperCode/Minesweeper/: Minesweeper.sln
MinesweeperCode/Minesweeper/Minesweeper/: DisplayManager.cpp  DisplayManager.h  GameManager.cpp  GameManager.h  Minesweeper.vcxproj  Minesweeper.vcxproj.filters  minesweeper.cpp
SnakeCode/: Apple.h  InitialPlanningDoc.txt  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h  SnakeGameManager.cpp  SnakeGameManager.h  SnakeScreenManager.cpp  SnakeScreenManager.h  Timer.cpp  Timer.h
SnakeCode/Snake/: Snake.sln
SnakeCode/Snake/Snake/: Apple.cpp  Apple.h  Location.cpp  Location.h  Snake.cpp  Snake.h  Snake.vcxproj  Snake.vcxproj.filters  SnakeGameManager.cpp  SnakeGameManager.h  SnakeScreenManager.cpp  SnakeScreenManager.h  main.cpp
TicTacToeCode/: ttt.cpp  ttt.h  ttt_functions.h
TicTacToeCode/Tic Tac Toe/: Tic Tac Toe.sln
TicTacToeCode/Tic Tac Toe/Tic Tac Toe/: Tic Tac Toe.vcxproj  ttt.cpp  ttt_functions.cpp  ttt_functions.h
TicTacToeCode/TicTacToe/TicTacToe/: Tic Tac Toe.vcxproj.filters  ttt_functions.h
WordleCode/: GameManager.h  ScreenManager.h  Wordle.cpp  Wordle.h  WordleGameManager.cpp  WordleScreenManager.cpp  wordleWords.txt
WordleCode/Wordle/: Wordle.sln
WordleCode/Wordle/Wordle/: GameManager.cpp  GameManager.h  ScreenManager.cpp  ScreenManager.h  Wordle.cpp  Wordle.vcxproj  Wordle.vcxproj.filters  main.cpp
common/: Location.cpp  Location.h
connect4/: DisplayManager.cpp  DisplayManager.h  GameManager.cpp  GameManager.h  connect4.cpp  connect4.sln  connect4.vcxproj  connect4.vcxproj.filters
dependencies/PDCurses-3.9/pdcurses/: scroll.c  slk.c  termattr.c  touch.c  util.c  window.c
dependencies/PDCurses-3.9/wincon/: pdcurses.lib
